working first prototype, clicks on browser viewable on mobile client also connected.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <html>
 <head>
 <title>marble blast bronze</title>
+
+<link rel="stylesheet" type="text/css" href="vendors/css/jquery-ui.min.css">
+<link rel="stylesheet" type="text/css" href="vendors/css/jquery-ui.structure.min.css">
+<link rel="stylesheet" type="text/css" href="vendors/css/jquery-ui.theme.min.css">
+<link rel="stylesheet" type="text/css" href="vendors/css/jquery.mobile-git.min.css">
+
+<script src="vendors/js/jquery-git.min.js"></script>
+<script src="vendors/js/jquery-ui.min.js"></script>
+<script src="vendors/p5/p5.min.js"></script>
+<script src="vendors/p5/p5.dom.min.js"></script>
+<script src="vendors/p5/p5.easycam.min.js"></script>
+<script src="vendors/p5/p5.func.min.js"></script>
+<script src="vendors/socket.io/socket.io.slim.js"></script>
+
+<!-- Personal stuff -->
+<script src="src/js/pquery.js"></script>
+<link rel="stylesheet" href="src/css/main.css">
 </head>
 
 
 <body>
+	<div id="view">
+		foo
+	</div>
 </body>
 </html>
